# tinyghidramcp

./: NOTICE.md  README.md  pyproject.toml
scripts/: bake_build_info.py
tests/: conftest.py  test_address_tolerance.py  test_auto_analyze.py  test_binary_summary.py  test_build_info.py  test_decompile_batch.py  test_decompile_cache.py  test_faulthandler.py  test_live.py  test_max_lines.py  test_meta_help.py  test_name_resolution.py  test_pyghidra_exec.py  test_pyghidra_timeout.py  test_redteam_batch.py  test_redteam_v2_batch.py  test_search_functions_regex.py  test_telemetry.py  test_tool_surface.py  test_xrefs_auto_expand.py  test_xrefs_include_data.py
tinyghidramcp/: __init__.py  _build_info.py  _pyghidra_session.py  _version.py  address_tolerance.py  backend.py  binary_summary.py  cli.py  decompile_cache.py  errors.py  meta.py  server.py  telemetry.py
